--- a/CursoJS/ex002/ex003.html
+++ b/CursoJS/ex002/ex003.html
@@ -21,10 +21,10 @@
     
     <script>
         var n1 = Number.parseInt(window.prompt('Digite o primeiro número: '))
-        var n2 = Number.parseInt(window.prompt('Digite o segundo número: '))
+        var n2 = Number.parseFloat(window.prompt('Digite o segundo número: '))
         var n3 = Number(window.prompt('Digite o terceiro número: '))
         var soma = n1 + n2 + n3
-        window.alert('A soma de ' + n1 + ' + ' + n2 + ' + ' + n3 + ' é igual a ' + soma)
+        window.alert(`A soma de ${n1} + ${n2} + ${n3} é igual a ${soma}!`)
 
         // (number + number) para adição
         // (string + string) para concatenação
