--- a/JavaScript/ex003/index.html
+++ b/JavaScript/ex003/index.html
@@ -16,5 +16,11 @@
 </head>
 <body>
     <h1>Relacionais, Lógicos e de teste</h1>
+
+    <script>
+        var n1 = Number(window.prompt('Digite o primeiro número: '))
+        var n2 = Number(window.prompt('Digite o segundo número: '))
+        document.write(n1 > n2 || n1 > 5)
+    </script>
 </body>
 </html>
