--- a/JavaScript/ex005/index.html
+++ b/JavaScript/ex005/index.html
@@ -3,13 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Eventos DOM</title>
+    <style>
+        div#area {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 20px;
+            background-color: lightgreen;
+            width: 200px;
+            height: 200px;
+            line-height: 200px;
+            text-align: center;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="area">
+        <p>Interaja...</p>
+    </div>
 
     <script>
-        
+        var a = window.document.getElementById('area')
+        a.addEventListener('click', clicar)
+        a.addEventListener('mouseenter', entrar)
+        a.addEventListener('mouseleave', sair)
+
+        function clicar() {
+            a.innerText = 'Clicaste em mim, não foi?'
+            a.style.background = 'lightblue'
+            a.style.width = '400px'
+        }
+
+        function entrar() {
+            a.innerText = 'Entrou aqui!'
+            a.style.background = 'lightgreen'
+            a.style.width = '200px'
+        }
+
+        function sair() {
+            a.innerText = 'Agora saiu!'
+            a.style.background = 'lightgreen'
+            a.style.width = '200px'
+        }
+
     </script>
 </body>
 </html>
