--- a/JavaScript/ex006/index.html
+++ b/JavaScript/ex006/index.html
@@ -40,7 +40,7 @@
             var n1 = Number(tn1.value)
             var n2 = Number(tn2.value)
             var soma = n1 + n2
-            res.innerHTML = `A soma entre ${n1} e ${n2} é igual a <strong>${soma}</strong>`
+            res.innerHTML = `A soma entre ${n1} e ${n2} é igual a ${soma}`
         }
     </script>
 </body>
