--- a/JSdesafios/ex001/index.html
+++ b/JSdesafios/ex001/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hora do Dia</title>
+    <title>Modelo de Exercício</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()"> <!--Quando o meu site carregar, ocorrerá um evento-->
     <header>
         <h1>Hora do dia</h1>
     </header>
     <section>
         <div id="msg"> <!--Horário com JS-->
-            testando...
+            aqui será a mensagem hora
         </div>
         <div id="foto">
-            <img id="imagem" src="img/dia.png" alt="foto_dia">
+            <img id="imagem" src="img/dia.png" alt="">
         </div>
     </section>
     <footer>
