--- a/EXdeFora/ex009/index.html
+++ b/EXdeFora/ex009/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da senha</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile-first/style.css">
 </head>
 <body>
     <header>
@@ -17,7 +18,7 @@
         </form>
         <input type="button" value="Avaliar" onclick="resposta()">
         <div id="result">
-
+            
         </div>
     </article>
     <script src="script.js"></script>
