--- a/EXdeFora/ex010/index.html
+++ b/EXdeFora/ex010/index.html
@@ -13,7 +13,8 @@
         </h1>
         <article>
             <form action="">
-                <input type="number" name="" id="Icont" min="0">
+                <input type="number" name="" id="Icont1" min="0">
+                <p><input type="number" name="" id="Icont2" min="0"></p>
             </form>
             <input type="button" value="Somar" onclick="avaliar()">
             <div id="resul">
