--- a/JSdesafios/ex005/index.html
+++ b/JSdesafios/ex005/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1></h1>
+    </header>
+    <section>
+        <div></div>
+        <div></div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
