--- a/JSdesafios/ex005/index.html
+++ b/JSdesafios/ex005/index.html
@@ -8,11 +8,20 @@
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>Analisador de Números</h1>
     </header>
     <section>
-        <div></div>
-        <div></div>
+        <div>
+            <label for="Inum">Número (entre 1 e 100): </label>
+            <input type="number" name="" id="Inum">
+            <input type="button" value="Adicionar" onclick="adicionar()">
+            <br><select name="" id="flista" size="6" ></select>
+            <br>
+            <input type="button" value="Finalizar" onclick="finalizar()">
+        </div>
+        <div id="res">
+
+        </div>
     </section>
 
     <script src="script.js"></script>
